<resources>
    <string name="app_name">WetherApp</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_accout_yet_press_here_for_sing_up">Don\'t have an accout yet? Press here for sing up</string>
    <string name="log_in">Log in</string>
    <string name="e_mail">E-mail</string>
    <string name="extended_data_about_weather_condition">Extended data about weather condition</string>
    <string name="_0_c">0*C</string>
    <string name="choose_a_new_city">Choose a new city</string>
    <string name="piatra_neamtgeles">Piatra Neamtgeles</string>
    <string name="weather_now">Weather now</string>
    <string name="add_a_new_city">Add a new city</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>

    <string name="facebook_app_id">935865400563578</string>
    <string name="fb_login_protocol_scheme">fb935865400563578</string>
    <string name="facebook_application_id">935865400563578</string>
    <string name="today">Today</string>
    <string name="_0_c_3_c">0°C/3°C</string>
    <string name="bucharest">Bucharest</string>
    <string name="city">City</string>


</resources>