<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbe8f0">


    <TextView
        android:id="@+id/temperature"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/_0_c"
        android:textColor="#515151"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/weatherCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="362dp"
        android:layout_height="161dp"
        android:layout_marginBottom="44dp"
        android:paddingStart="5sp"
        android:paddingEnd="5sp"
        android:text="@string/extended_data_about_weather_condition"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="250dp"
        android:contentDescription="@string/weather_now"
        android:src="@drawable/images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="366dp"
        android:layout_height="65dp"
        android:text="@string/bucharest"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>